Fixed NavBar - redownloaded bootstrap
Redownloaded custom bootstrap so it came with some extra files to make
the change- changed collapse to 715 pixels otherwise the text on the
web page would get too small using the @grid-break-point variable in
the custom download - this was a suggested fix on the bootstrap site.
Also added a couple media queries to shrink text

--- a/src/css/template.css
+++ b/src/css/template.css
@@ -8,7 +8,8 @@
 
 .navbar-right{
 	padding-top: 95px;
-	font-size: 2em;
+	font-size: 23px;
+
 }
 
 iframe[seamless]{
@@ -40,32 +41,20 @@ body {
 	background:#F0F0F0;
 	text-align: center;
 }
-@media(min-width: 400px){
-  .navbar-toggle{
-    display: none;
-  }
-  .navbar-right{
-    display: block;
-  }
+
+@media only screen and (max-width: 950px){
+  .navbar-right{font-size: 21px;}
 }
 
-@media (min-width: 400px){
-  .navbar-right .dropdown-menu{
-    right: 0;
-    left: auto;
-  }
+@media only screen and (max-width: 850px){
+  .navbar-right{font-size: 18px;}
+}
+
+@media only screen and (max-width: 750px){
+  .navbar-right{font-size: 16px;}
 }
 
 
-}
-@media only screen and (max-width: 1000px){
-  .navbar-right{font-size: 1.3em;}
-}
 
-@media only screen and (max-width: 900px){
-  .navbar-right{font-size: 1rem;}
-}
 
-@media only screen and (max-width: 200px ){
-  .navbar-right{font-size: .5em;}
-}
+
